# Code

./: .gitignore  README.md
Test/test_drone_1/: Cargo.toml  config.toml
Test/test_drone_1/src/: main.rs
Test/test_drone_2/: Cargo.toml  config.toml
Test/test_drone_2/src/: main.rs
game_of_drones/: Cargo.toml  README.md
game_of_drones/src/: lib.rs
project/: Cargo.toml
project/client/: Cargo.toml
project/client/src/: fragment_handling.rs  lib.rs
project/controller/: Cargo.toml
project/controller/src/: lib.rs
project/drone_factory/: Cargo.toml
project/drone_factory/src/: lib.rs
project/fragmentation_handling/: Cargo.toml  README.md
project/fragmentation_handling/src/: lib.rs
project/network_initializer/: Cargo.toml
project/network_initializer/src/: lib.rs
project/network_initialzer/src/: lib.rs
project/server/: Cargo.toml
project/server/src/: lib.rs  main.rs
project/server/src/web_server/: server.rs
project/src/: main.rs
project/src/api/: drone.rs
project/src/examples/: drone_usage.rs
project/src/initializer/: parser.rs
project/src/types/: command.rs  mod.rs
project/topology/: Cargo.toml
project/topology/src/: lib.rs
