[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
crossbeam-channel = "0.5.13"
controller = { path = "../controller" }
bevy = "0.11"
image = "0.24"
topology = { path = "../topology" }
fragmentation_handling = { path = "../fragmentation_handling" }