[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
crossbeam-channel = "0.5.13"
controller = { path = "../controller" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
topology = { path = "../topology" }
hyper-util = { version = "0.1.10", features = ["full"]}
hyper = { version = "1.5.2", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
pretty_env_logger = "0.5"
http-body-util = "0.1"
bytes = "1"
form_urlencoded = "1"
http = "1"
futures-util = { version = "0.3", default-features = false }
hyper-router = "^0.5"